<resources>
    <string name="app_name">Gasto viagem</string>
    <string name="title">Custo de viagem</string>
    <string name="total_km">Total de km</string>
    <string name="distance">Distancia</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_per_liter">km por litro</string>
    <string name="calculate">Calcular</string>
    <string name="total_spend">O gasto total sera de</string>
    <string name="spend">R$0</string>
</resources>