<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#DAA520"
        android:paddingTop="8dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="64dp">

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/distance"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:text="@string/total_km"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:text="@string/price_per_liter"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/autonomy"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/autonomy"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:text="@string/km_per_liter"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_spend"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/total_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32sp"
            android:text="@string/spend"
            android:textAlignment="center"
            android:textSize="32dp" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DAA520"
            android:text="@string/calculate"

            />
    </LinearLayout>


</LinearLayout>